workloads/sftpgo/kustomize/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: sftpgo-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - sftpgo.invalid.example

  rules:
    - backendRefs:
        - name: sftpgo-env # SVC name (internal IP:PORT).
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: sftpgo-http

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - sftpgo.invalid.example

  rules:
    # - backendRefs:
    #     - name: sftpgo-env # SVC name (internal IP:PORT).
    #       port: 80
    #   matches:
    #     - path:
    #         type: PathPrefix
    #         value: /
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
